core/networking/envoy-gateway/tailscale/gateway.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-tailscale
  annotations: # external-dns.alpha.kubernetes.io/target: &hostname external.${SECRET_ROOT_DOMAIN}
spec:
  gatewayClassName: envoy-tailscale
  infrastructure:
    annotations:
      # external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: ${SVC_ENVOY_GATEWAY_TAILSCALE}

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: tailscale-tls
